# sst-ugni

./: CMakeLists.txt  cray-gni-headers.pc.in  cray-udreg.pc.in  cray-ugni.pc.in  env.sh.in  libpmi.cc  libugni.cc
cmake/: sstUgniConfig.cmake.in
